1) Обновил главное активити. 2) Обновил активити "овощи".

--- a/CW/app/src/main/res/layout/main.xml
+++ b/CW/app/src/main/res/layout/main.xml
@@ -5,10 +5,12 @@
     <ScrollView
 
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:fillViewport="true"
         android:background="@drawable/background_fon"
-        android:translationZ="1dp">
+        android:scaleType="fitXY"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="30dp">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -25,12 +27,12 @@
         android:textOff="Фрукты"
         android:textSize="16dp"
         android:textAlignment="center"
-        android:textColor="#E72A30"
+        android:textColor="@color/color_main"
         android:onClick="onToggleButtonClick"
         android:checked="false"
-        android:layout_marginTop="60dp"
         android:layout_marginLeft="3dp"
-        android:textStyle="normal" />
+        android:textStyle="normal"
+        android:layout_marginTop="20dp" />
         <!-- android:drawableLeft="@drawable/icon_phone"
         android:textStyle="bold|italic"-->
 
@@ -45,7 +47,7 @@
         android:textOff="Овощи"
         android:textSize="16dp"
         android:textAlignment="center"
-        android:textColor="#E72A30"
+        android:textColor="@color/color_main"
         android:onClick="onToggleButtonClick"
         android:checked="false"
         android:layout_alignBottom="@+id/fruit"
@@ -61,7 +63,7 @@
         android:textOff="Приправы"
         android:textSize="15dp"
         android:textAlignment="center"
-        android:textColor="#E72A30"
+        android:textColor="@color/color_main"
         android:onClick="onToggleButtonClick"
         android:checked="false"
         android:layout_alignBottom="@+id/vegetables"
@@ -73,12 +75,12 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:background="@android:color/transparent"
-        android:drawableTop="@drawable/dairy_off"
+        android:drawableTop="@drawable/dai_on_off"
         android:gravity="center_vertical"
         android:textOn="Молочные продукты"
         android:textOff="Молочные продукты"
         android:textSize="13dp"
-        android:textColor="#E72A30"
+        android:textColor="@color/color_main"
         android:onClick="onToggleButtonClick"
         android:checked="false"
         android:layout_marginTop="35dp"
@@ -91,12 +93,12 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:background="@android:color/transparent"
-        android:drawableTop="@drawable/supp_off"
+        android:drawableTop="@drawable/supp_on_off"
         android:gravity="center_vertical"
         android:textOn="Пищевые добавки"
         android:textOff="Пищевые добавки"
         android:textSize="13dp"
-        android:textColor="#E72A30"
+        android:textColor="@color/color_main"
         android:onClick="onToggleButtonClick"
         android:checked="false"
         android:textAlignment="center"
@@ -114,7 +116,7 @@
         android:textOff="Орехи"
         android:textSize="15dp"
         android:textAlignment="center"
-        android:textColor="@color/color"
+        android:textColor="@color/color_main"
         android:onClick="onToggleButtonClick"
         android:checked="false"
         android:layout_alignTop="@+id/supplements"
@@ -127,13 +129,13 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:background="@android:color/transparent"
-        android:drawableTop="@drawable/meat_off"
+        android:drawableTop="@drawable/meat_on_off"
         android:gravity="center_vertical"
         android:textOn="Мясо"
         android:textOff="Мясо"
         android:textSize="15dp"
         android:textAlignment="center"
-        android:textColor="#E72A30"
+        android:textColor="@color/color_main"
         android:onClick="onToggleButtonClick"
         android:checked="false"
         android:layout_below="@+id/dairy"
@@ -152,7 +154,7 @@
         android:textOff="Заправка"
         android:textSize="15dp"
         android:textAlignment="center"
-        android:textColor="@color/color"
+        android:textColor="@color/color_main"
         android:onClick="onToggleButtonClick"
         android:checked="false"
         android:layout_alignBottom="@+id/meat"
@@ -163,13 +165,13 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:background="@android:color/transparent"
-        android:drawableTop="@drawable/sea_off"
+        android:drawableTop="@drawable/sea_on_off"
         android:gravity="center_vertical"
         android:textOn="Морепродукты"
         android:textOff="Морепродукты"
         android:textSize="12dp"
         android:textAlignment="center"
-        android:textColor="#E72A30"
+        android:textColor="@color/color_main"
         android:onClick="onToggleButtonClick"
         android:checked="false"
         android:layout_alignBottom="@+id/refill"
@@ -182,71 +184,61 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:background="@android:color/transparent"
-        android:drawableTop="@drawable/cer_off"
+        android:drawableTop="@drawable/cer_on_off"
         android:gravity="center_vertical"
         android:textOn="Крупы"
         android:textOff="Крупы"
         android:textSize="15dp"
         android:textAlignment="center"
-        android:textColor="#E72A30"
+        android:textColor="@color/color_main"
         android:onClick="onToggleButtonClick"
         android:checked="false"
         android:layout_below="@+id/meat"
         android:layout_alignLeft="@+id/meat"
         android:layout_alignStart="@+id/meat"
         android:layout_marginTop="35dp"
-        android:layout_marginLeft="3dp" />
+        android:layout_marginLeft="3dp"
+        android:layout_marginBottom="10dp" />
 
     <ToggleButton
         android:id="@+id/greenery"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:background="@android:color/transparent"
-        android:drawableTop="@drawable/gree_off"
+        android:drawableTop="@drawable/gree_on_off"
         android:gravity="center_vertical"
         android:textOn="Зелень"
         android:textOff="Зелень"
         android:textSize="15dp"
         android:textAlignment="center"
-        android:textColor="#E72A30"
+        android:textColor="@color/color_main"
         android:onClick="onToggleButtonClick"
         android:checked="false"
         android:layout_below="@+id/refill"
         android:layout_alignLeft="@+id/refill"
         android:layout_alignStart="@+id/refill"
-        android:layout_marginTop="35dp" />
+        android:layout_marginTop="35dp"
+        android:layout_marginBottom="10dp" />
 
             <ToggleButton
                 android:id="@+id/berries"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:background="@android:color/transparent"
-                android:drawableTop="@drawable/ber_off"
+                android:drawableTop="@drawable/ber_on_off"
                 android:gravity="center_vertical"
                 android:textOn="Ягоды"
                 android:textOff="Ягоды"
                 android:textSize="15dp"
                 android:textAlignment="center"
-                android:textColor="#E72A30"
+                android:textColor="@color/color_main"
                 android:onClick="onToggleButtonClick"
                 android:checked="false"
                 android:layout_below="@+id/seafood"
                 android:layout_alignLeft="@+id/seafood"
                 android:layout_alignStart="@+id/seafood"
-                android:layout_marginTop="35dp" />
-
-            <ToggleButton
-                android:id="@+id/toggleButton5"
-                android:layout_width="1dp"
-                android:layout_height="50dp"
-                android:background="@android:color/transparent"
-                android:gravity="center_vertical"
-                android:textSize="15dp"
-                android:textAlignment="center"
-                android:textColor="@android:color/transparent"
-                android:layout_below="@+id/berries"
-                android:layout_toRightOf="@+id/cereals"
-                android:layout_toEndOf="@+id/cereals" />
+                android:layout_marginTop="35dp"
+                android:layout_marginBottom="10dp" />
 
         </RelativeLayout>
     </ScrollView>
@@ -256,7 +248,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="top"
-        android:visibility="visible"
         android:translationZ="2dp">
 
         <TextView
@@ -294,8 +285,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_gravity="bottom"
-        android:translationZ="2dp"
-        android:visibility="visible">
+        android:translationZ="2dp">
 
         <TextView
             android:layout_width="fill_parent"
