--- a/CW/app/src/main/res/drawable/fruit_on_off.xml
+++ b/CW/app/src/main/res/drawable/fruit_on_off.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:drawable="@drawable/check"
-        android:state_checked="true" />
+        android:state_pressed="true" />
     <item
         android:drawable="@drawable/fruit_off"
         android:state_checked="false" />
